--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'Commit Pattern Enforcer'
-description: 'A flexible GitHub Action that validates commit messages against custom regex patterns to enforce consistent commit message standards across your repository.'
+description: 'A flexible GitHub Action that validates commit messages against custom regex patterns.'
 author: "Haseeb Rehan Aziz <haseeb.rehan.aziz@gmail.com>"
 branding:
   icon: 'check-circle'
